--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -67,7 +67,7 @@
   background-image: linear-gradient(to top right, blue, green);
   height:100vh;
   margin: 0px;
-  padding:250px;
+  padding:0px 250px;
 }
 .main-container {
     border: 2px solid black;
