--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -10,43 +10,30 @@
         position:absolute;
         right: 50px;
         top:30px;
-        transform:scale(3);
+        transform:scale(2);
         &:hover{
-         &.logout{
-                
-                background: white;
-                right: 15px;
-                width: 200px;
-                height: 200px;
-                border-radius: 10px;
-                
-        
+          border:1px solid rgb(185, 177, 177);
+          border-radius:15px;
+          cursor: pointer;
         }
-    }
-    
-         
         &div{
             margin-bottom: 10px;
         }
     }
-    
-
-    div {
+     div {
         margin: 0px;
         padding: 0px;
-        
-
         img {
             height: 80px;
-            width: 80px;}
-    }
-
-    h1 {
+            width: 80px;
+           }
+        }
+        h1 {
         margin-left: 30px;
         font-size: 50px;
         font-style: unset;
-    }
-}
+       }
+  }
 
     
 
@@ -61,3 +48,20 @@
 //         font-size: large;
 //     }
 // }
+.profile{
+    position: absolute;
+    top:80px;
+    right:30px;
+    width: 200px;
+    height:200px;
+    background-color: #fff;
+    border-radius:10px;
+    display: flex;
+    flex-direction:column;
+    text-align: center;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    
+}
+.display{
+    display:none;
+}
