--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -76,6 +76,7 @@
     border: 2px solid black;
     border-radius: 10px;
     background: #fff;
+    margin-top: 40px;
     form{
         padding: 40px;
     }
@@ -110,7 +111,7 @@
         width:100%;
         border-radius: 10px;
         border-color: #bbb;
-        color: #101;
+        color: #333;
      }
   }
 
