--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -66,7 +66,7 @@
   <!-- <mat-paginator color="warn" [pageSizeOptions]="[8, 16, 24]" showFirstLastButtons>
   </mat-paginator> -->
 </div>
-<mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5 bg-secondary text-white mt-3"
+<mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5 bg-secondary text-white mt-3 mb-2"
   [pageSize]="10"
   [pageSizeOptions]="[5, 10, 25, 100]"
   aria-label="Select page"
