--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -60,6 +60,11 @@
     flex-direction:column;
     text-align: center;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    button{
+       &:hover{
+        background-color:rgb(249, 249, 249);
+       }
+    }
     
 }
 .display{
