--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,7 +9,7 @@
         <button class="btn btn-white mt-0">{{userName}}</button>
         <button class="btn btn-white mt-3">View Profile</button>
         <button class="btn btn-white mt-3">Settings</button>
-        <button (click)="route()" class="btn btn-white mt-3">Logout</button>
+        <button (click)="LogOut()" class="btn btn-white mt-3">Logout</button>
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </div>
