--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,37 +1,24 @@
-<!-- <h1 class="text-info">this is  dashBoard</h1> -->
-<div class="container-fluid mt-3">
-    <ngb-carousel >
-      <ng-template ngbSlide>
-        <div class="wrapper">
-          <img src="./../../../assets/image3.jpg" alt="Random first slide">
-        </div>
-        <div class="carousel-caption">
-          <h3>First Slide</h3>
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <div class="wrapper">
-          <img src="./../../../assets/image2.jpg" alt="Random second slide">
-        </div>
-        <div class="carousel-caption">
-          <h3>Second Slide</h3>
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <div class="wrapper">
-          <img src="./../../../assets/image1.png"  alt="Random third slide">
-        </div>
-        <div class="carousel-caption">
-          <h3>Third Slide</h3>
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <div class="wrapper">
-          <img src="./../../../assets/image4.jpg" alt="Random second slide">
-        </div>
-        <div class="carousel-caption">
-          <h3>Fourth Slide</h3>
-        </div>
-      </ng-template>
-    </ngb-carousel>
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./../../../assets/image3.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./../../../assets/image2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./../../../assets/image1.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./../../../assets/image4.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
