--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,3 +22,26 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<!-- Default dropup button -->
+<div class="btn-group dropup">
+  <button type="button" class="btn btn-secondary dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="false">
+    <i class="bi bi-person-circle"></i>
+  </button>
+ <!-- Dropdown menu links -->
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Action</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Separated link</a></li>
+  </ul>
+</div>
+
+<br><br><br><br><br><br><br><br>
+
+<div class="dropdown rounded-circle">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <i class="bi bi-person-circle"></i>
+  </button>
+</div>  
