--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,7 +4,11 @@
         style="--bs-bg-opacity: .5;">
         VSS Project-1
     </h1>
-    <mat-icon id="icon" (click)="profile()">account_circle</mat-icon>
+    <div class="dropdown rounded-circle dropdownmenu bg-dark" (click)="profile()">
+        <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="bi bi-person-circle icon-size"></i>
+        </button>
+      </div> 
     <div [ngClass]="profilecondition ? 'profile':'display'" (mouseleave)="leave($event)" >
         <button class="btn btn-white mt-0">{{userName}}</button>
         <button class="btn btn-white mt-3">View Profile</button>
