--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -4,7 +4,7 @@
     background-color: rgb(190, 201, 201);
     padding: 20px 0px;
     padding: 0px;
-    background-color: rgb(114, 101, 189);
+    background-color:#2874f0;
     position: relative;
 
     .dropdownmenu {
