--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="main-container">
     <div><img src="../../../assets/apple.jpg"/></div>
-    <h1 class="demo" class="border border-primary position-static  p-3 " class="text-danger p-2"
+    <h1 class="demo" class="border border-primary position-static  p-3 " class="text-white p-2"
         style="--bs-bg-opacity: .5;">
         VSS Project-1
     </h1>
-    <div class="dropdown rounded-circle dropdownmenu bg-dark" (click)="profile()">
-        <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <div class="dropdown rounded-circle dropdownmenu bg-white" (click)="profile()">
+        <button class="btn btn-white dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="bi bi-person-circle icon-size"></i>
         </button>
       </div> 
