--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,50 +1,54 @@
-<div class="main-container">
-    <div class="sub-container">
-        <div class="bottom-container text-white">
-            <img src="./../../assets/apple.jpg" alt="VSS Project">
-            <span>VSS Project</span>
-        </div>
-        <div class="login-container p-5">
-            <h4 style="color: #353030;">Login to vss project</h4>
-            <form [formGroup]="LoginForm">
-                <div class="userName mt-3">
-                    <mat-icon class="accountIcon">account_circle</mat-icon>
-                    <input type="text" class="form-control" formControlName="userName" maxlength="15" 
-                    placeholder="User Name">
-                </div>
-                <div class="password mt-3">
-                    <mat-icon class="accountIcon">lock</mat-icon>
-                    <input type="password" class="form-control"  formControlName="password" 
-                    placeholder="Password">
-                </div>
-                <div class="select mt-3">
-                    <select class="form-select form-select "  name="user" formControlName="userType" >
-                        <option value="{{user.name}}" *ngFor="let user of userType">{{user.value}}</option>
-                    </select>
-                </div>
-                <div class="text-error text-danger mt-3">{{error}}</div>
-                <div>
-                    <button class="btn btn-danger mt-1 w-100" (click)="login()">Login</button>
-                </div>
-                <div class="routers mt-3">
-                    <a [routerLink]="['/registration']">Register</a>
-                    <a [routerLink]="['/forgetpasswordemailLink']">Forgot Password</a>
-                </div>
-                <div class="border mt-4"></div>
-                <div class="login-bottom mt-4">
-                    <p>Or sign in with</p>
-                    <div>
-                        <img src="./../../assets/sign-google.png" alt="Google">
-                        <img src="./../../assets//sign-lark.png" alt="Twitter">
+<div class="parent">
+    <app-header></app-header>
+    <div class="main-container">
+        <div class="sub-container">
+            <div class="bottom-container text-white">
+                <img src="./../../assets/apple.jpg" alt="VSS Project">
+                <span>VSS Project</span>
+            </div>
+            <div class="login-container p-5 mt-3">
+                <h4 style="color: #353030;">Login to vss project</h4>
+                <form [formGroup]="LoginForm">
+                    <div class="userName mt-3">
+                        <mat-icon class="accountIcon">account_circle</mat-icon>
+                        <input type="text" class="form-control" formControlName="userName" maxlength="15" 
+                        placeholder="User Name">
                     </div>
-                </div>
-            </form>
-        </div>
-        <div class="left-text-container text-white">
-             <h1>Design + Collaboration, all in VSS Project</h1>
-             <p>A virtual center for designers, devs, PMs, and all design parties to perform their
-                 duties in unison. At least 200% faster with Vss Project.
-             </p>
+                    <div class="password mt-3">
+                        <mat-icon class="accountIcon">lock</mat-icon>
+                        <input type="password" class="form-control"  formControlName="password" 
+                        placeholder="Password">
+                    </div>
+                    <div class="select mt-3">
+                        <select class="form-select form-select "  name="user" formControlName="userType" >
+                            <option value="{{user.name}}" *ngFor="let user of userType">{{user.value}}</option>
+                        </select>
+                    </div>
+                    <div class="text-error text-danger mt-2">{{error}}</div>
+                    <div>
+                        <button class="btn btn-danger mt-2 w-100" (click)="login()">Login</button>
+                    </div>
+                    <div class="routers mt-1">
+                        <a [routerLink]="['/registration']">Register</a>
+                        <a [routerLink]="['/forgetpasswordemailLink']">Forgot Password</a>
+                    </div>
+                    <div class="border mt-2"></div>
+                    <div class="login-bottom mt-2">
+                        <p>Or sign in with</p>
+                        <div>
+                            <img src="./../../assets/sign-google.png" alt="Google">
+                            <img src="./../../assets//sign-lark.png" alt="Twitter">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="left-text-container text-white">
+                <h1>Design + Collaboration, all in VSS Project</h1>
+                <p>A virtual center for designers, devs, PMs, and all design parties to perform their
+                    duties in unison. At least 200% faster with Vss Project.
+                </p>
+            </div>
         </div>
     </div>
+    <app-footeer></app-footeer>
 </div>
