--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,94 +1,96 @@
-.main-container{
-    background:url(../../assets/signin-bg.jpg) no-repeat center;
-    width: 100%;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-    background-size: cover;
-    position: relative;
-    //z-index: -1;
-    .sub-container{
-       background: rgba(black, 0.6);
-       width: 100%;
-       height:100vh;
-       //opacity:0.6;
-      // z-index:1;
-       .bottom-container {
-            z-index:0;
-            position: absolute;
-            top: 30px;
-            right:250px;
-            img{
+.parent{
+    height:100vh;
+    .main-container{
+        background:url(../../assets/signin-bg.jpg) no-repeat center;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        background-size: cover;
+        position: relative;
+        //z-index: -1;
+        .sub-container{
+        background: rgba(black, 0.6);
+        width: 100%;
+        height:71vh;
+        //opacity:0.6;
+        // z-index:1;
+        .bottom-container {
+                z-index:0;
                 position: absolute;
-                width:50px;
-                height:50px;
-                margin:10px;
-                top:0px;
-                left:-62px;
-            }
-            span{
-                font-size:50px;
-            }
-        }
-        .login-container {
-            position: absolute;
-            width:450px;
-            height:500px;
-            background-color:rgb(255, 255, 255);
-            top:70px;
-            left:40px;
-            border-radius:35px;
-            box-shadow: 0 16px 32px 0 rgba(145, 82, 82, 0.08);
-            .userName{
-                mat-icon{
-                position: absolute;
-                transform: scale(1);
-                top:100px;
-                left:22px;
-              }
-            }
-            .password{
-                mat-icon{
-                position: absolute;
-                transform: scale(1);
-                top:153px;
-                left:22px;
-              }
-            }
-            .text-error{
-                width:100%px;
-                height:40px;
-                p{
-                    margin:0px;
-                    padding:0px;
+                top: 30px;
+                right:250px;
+                img{
+                    position: absolute;
+                    width:50px;
+                    height:50px;
+                    margin:10px;
+                    top:0px;
+                    left:-62px;
+                }
+                span{
+                    font-size:50px;
                 }
             }
-            .routers{
-                  display: flex;
-                  justify-content:space-between;
-            }
-            .border{
-                border-bottom: 1px solid #f0f0f0;
-            }
-            .login-bottom{
-                display: flex;
-                justify-content: space-between;
-                img{
-                    margin-left:5px;
-                    width: 30px;
-                    height: 30px;
-                    &:hover{
-                        cursor: pointer;
+            .login-container {
+                position: absolute;
+                width:450px;
+                height:400px;
+                background-color:rgb(255, 255, 255);
+                top:0px;
+                left:40px;
+                border-radius:35px;
+                box-shadow: 0 16px 32px 0 rgba(145, 82, 82, 0.08);
+                .userName{
+                    mat-icon{
+                    position: absolute;
+                    transform: scale(1);
+                    top:100px;
+                    left:22px;
+                }
+                }
+                .password{
+                    mat-icon{
+                    position: absolute;
+                    transform: scale(1);
+                    top:153px;
+                    left:22px;
+                }
+                }
+                .text-error{
+                    width:100%;
+                    height:20px;
+                    p{
+                        margin:0px;
+                        padding:0px;
                     }
                 }
+                .routers{
+                    display: flex;
+                    justify-content:space-between;
+                }
+                .border{
+                    border-bottom: 1px solid #f0f0f0;
+                }
+                .login-bottom{
+                    display: flex;
+                    justify-content: space-between;
+                    img{
+                        margin-left:5px;
+                        width: 30px;
+                        height: 30px;
+                        &:hover{
+                            cursor: pointer;
+                        }
+                    }
+                }
+            } 
+            .left-text-container {
+                position:absolute;
+                bottom:100px;
+                left:600px;
             }
-        } 
-        .left-text-container {
-            position:absolute;
-            bottom:100px;
-            left:600px;
-        }
-   } 
+    } 
+    }
 }
 // .ng-valid{
 //      outline: solid 1px red;
