--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -34,7 +34,7 @@
             .login-container {
                 position: absolute;
                 width:450px;
-                height:400px;
+                height:65vh;
                 background-color:rgb(255, 255, 255);
                 top:0px;
                 left:40px;
