--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -1,37 +1,92 @@
-<div class="reset">
-  <div>
-    <br />
-    <h1>Forget Password</h1>
-    <br />
-    <p>we have sent a four digit code your phone/email</p>
-    <div>
-      <label for="input password">Please Enter OTP</label><br />
-      <input type="text" formControlName="OTP" class="form-control"  maxlength="20"id="OTP" placeholder="OTP">
-    </div>
-    <div>
-      <label for="input password">New password</label><br />
-      <input
-        type="password"
-        name=""
-        formControlName="Enter password"
-        class="form-control"
-        id="Enter password"
-        placeholder="Enter password"
-      />
-    </div>
+<div class="p1 pt-5">
+  <div class="p2" *ngIf="disabled">
+    <form [formGroup]="ForgotForm" (ngSubmit)="reset()">
+      <h1>Forgot Password</h1>
+      <div class="form-group">
+        <label for="Email" id="v1" class="col-sm-2 col-form-label">Email*:</label>
+        <input type="text" formControlName="email" maxlength="30" class="form-control" id="Email"
+          placeholder="Enter Email">
+        <ng-container
+          *ngIf="(getForgotFormControl('email').touched || getForgotFormControl('email').dirty) && getForgotFormControl('email').invalid">
+          <div class="error" *ngIf="getForgotFormControl('email')?.errors['required']">email is required
+          </div>
+        </ng-container>
+        <span style="color:red"
+          *ngIf="(getForgotFormControl('email').touched || getForgotFormControl('email').dirty) && getForgotFormControl('email').invalid"><i
+            class="bi bi-x-circle-fill"></i></span>
+        <span style="color: rgb(9, 245, 80);" *ngIf="getForgotFormControl('email').valid"><i
+            class="bi bi-check-circle-fill"></i></span>
+      </div>
+      <button type="submit" class="btn btn-success" [disabled]="ForgotForm.invalid">Resetpassword</button>
+    </form>
+  </div>
 
-    <div>
-      <label for="input password">Confirm password</label><br />
-      <input
-        type="password"
-        name=""
-        formControlName="Enter password"
-        class="form-control"
-        id="Enter password"
-        placeholder="Enter password"
-      />
-    </div>
-    <br />
-    <button (click)="resetPassword()"   class="btn btn-danger">Reset password</button><br />
+  <div *ngIf="!disabled && isdisabled" class="p3">
+    <form [formGroup]="ForgotsForm">
+      <h1>Reset Password</h1>
+      <div class="form-group">
+        <label for="OTP" id="v1" class="col-sm-2 col-form-label">OTP*:</label>
+        <input type="number" formControlName="otp" maxlength="6" class="form-control" id="OTP" placeholder="Enter OTP">
+        <ng-container
+          *ngIf="(getForgotsFormControl('otp').touched || getForgotsFormControl('otp').dirty) && getForgotsFormControl('otp').invalid">
+          <div class="error" *ngIf="getForgotsFormControl('otp')?.errors['required']">otp is required
+          </div>
+        </ng-container>
+        <span style="color:red"
+          *ngIf="(getForgotsFormControl('otp').touched || getForgotsFormControl('otp').dirty) && getForgotsFormControl('otp').invalid"><i
+            class="bi bi-x-circle-fill"></i></span>
+        <span style="color: rgb(9, 245, 80);" *ngIf="getForgotsFormControl('otp').valid"><i
+            class="bi bi-check-circle-fill"></i></span>
+      </div>
+      <div class="form-group ">
+        <label for="password" id="v1" class="col-sm-2 col-form-label">Password*:</label>
+        <input type="password" formControlName="password" maxlength="10" class="form-control" id="password"
+          placeholder="Enter Password">
+        <ng-container
+          *ngIf="(getForgotsFormControl('password').touched || getForgotsFormControl('password').dirty) && getForgotsFormControl('password').invalid">
+          <div class="error" *ngIf="getForgotsFormControl('password')?.errors['required']">Password is
+            required</div>
+          <div class="error" *ngIf="getForgotsFormControl('password')?.errors['minlength']">min.8 letters has
+            required
+          </div>
+        </ng-container>
+        <span style="color:red"
+          *ngIf="(getForgotsFormControl('password').touched || getForgotsFormControl('password').dirty) && getForgotsFormControl('password').invalid">
+          <i class="bi bi-x-circle-fill"></i>
+        </span>
+        <span style="color: rgb(9, 245, 80);" *ngIf="getForgotsFormControl('password').valid">
+          <i class="bi bi-check-circle-fill"></i>
+        </span>
+      </div>
+      <div class="form-group ">
+        <label for="cpassword" id="v1" class="col-sm-2 col-form-label">ConfirmPassword*:</label>
+        <input type="password" formControlName="cpassword" maxlength="10" class="form-control" id="cpassword"
+          placeholder="Enter CPassword">
+        <ng-container
+          *ngIf="(getForgotsFormControl('cpassword').touched || getForgotsFormControl('cpassword').dirty) && getForgotsFormControl('cpassword').invalid">
+          <div class="error" *ngIf="getForgotsFormControl('cpassword')?.errors['required']">ConfirmPassword is
+            required</div>
+          <div class="error" *ngIf="getForgotsFormControl('cpassword')?.errors['minlength']">min.8 letters has
+            required
+          </div>
+        </ng-container>
+        <span style="color:red"
+          *ngIf="(getForgotsFormControl('cpassword').touched || getForgotsFormControl('cpassword').dirty) && getForgotsFormControl('cpassword').invalid">
+          <i class="bi bi-x-circle-fill"></i>
+        </span>
+        <span style="color: rgb(9, 245, 80);" *ngIf="getForgotsFormControl('cpassword').valid">
+          <i class="bi bi-check-circle-fill"></i>
+        </span>
+      </div>
+      <button class="btn btn-success mt-4" (click)="Changereset()" [disabled]="ForgotsForm.invalid">Change
+        reset</button>
+    </form>
+  </div>
+
+  <div class="s1" *ngIf="!isdisabled">
+    <img src="../assets/download.png">
+    <h2>Reset password is succesfully</h2><br><br>
+    <p>please go to login page</p>
+    <button class="s2" type="button"><a [routerLink]="['/login']">login</a></button>
   </div>
 </div>
