--- a/src/app/components/forget-password/forget-password.component.scss
+++ b/src/app/components/forget-password/forget-password.component.scss
@@ -1,28 +1,122 @@
-.reset{
-    border: 2px solid black;
-    width: 400px;
-    height: 450px;;
-    display:flex;
-    margin: auto;
-    justify-content: center;
-    text-align: center;
+ .p1{
+    background: url(../../../assets/download.jfif) center no-repeat;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background-size: cover;
+    position: relative;  
+
+ .p2{
+    height: 500px;
+    width: 500px;
     display: flex;
-    margin-top: 150px;
-
-    
+    justify-content: center;
+    margin: auto;
+    border: 2px solid black;
+    background: white;
+    border-radius: 30px;
+    padding: 30px;
+    h1{
+        margin-bottom: 90px;
+        margin-top: 20px;
+        font-weight: bold;
+    }
+    .form-group{
+        position: relative;
+        input{
+            width: 100%;
+        }
+        #v1{
+            font-size: 15px;
+            font-weight: bold;
+        }
+        span{
+            position: absolute;
+            top:43px;
+            left:280px;
+        }
+    }
+    .error{
+        color: red;
+    }
+  }
+  button{
+    margin-top: 80px;
+    float: right;
+}   
+.p3{
+    height: 540px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    border: 2px solid black;
+    background: white;
+    border-radius: 30px;
+    padding: 30px;
+    h1{
+        margin-bottom: 40px;
+        margin-top: 20px;
+        font-weight: bold;
+    }
+    .form-group{
+        position: relative;
+        input{
+            width: 100%;
+        }
+        #v1{
+            font-size: 15px;
+            font-weight: bold;
+        }
+        span{
+            position: absolute;
+            top:43px;
+            left:270px;
+        }
+    }
+    .error{
+        color: red;
+    }
+  }
+  button{
+    margin-top: 80px;
+    float: right;
+}   
 }
 
-div{
+.s1 {
+    width: 600px;
+    background: #fff;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
-    color: green;
-    line-height: 30px;
-    background-color: rgba(255, 192, 203, 0.909);
-   
-    box-shadow: 5px 10px 20px red inset;
-   
-     
-   
+    margin: auto;
+    color: #333;
+    padding: 30px;
+    border: 1px solid black;
+
+    img {
+        width: 100px;
+        border-radius: 50%;
+        margin-top: -80px;
+        box-shadow: 0px 2px 2px #fff;
+    }
+
+    .s2 {
+        width: 100%;
+        padding: 10px;
+        color: #fff;
+        background: #6fd649;
+        border: 0;
+        font-size: 25px;
+        border-radius: 5px;
+        cursor: pointer;
+        box-shadow: 0px 2px 2px #fff;
+        margin-top: 50px;
+    }
+
 }
-    
-    
-    
+
