--- a/src/app/core/footeer/footeer.component.html
+++ b/src/app/core/footeer/footeer.component.html
@@ -1,13 +1,10 @@
 <div class="main-container">
-    <h1>
-        <i style="opacity: 0.5;">OUR AMAZON WORLD </i>
-        <i class="fab fa-facebook-f"></i>
-    </h1>
     <div class="social">
         <mat-icon> email</mat-icon>
         <mat-icon>facebook</mat-icon>
         <mat-icon> chat</mat-icon>
     </div>
+    <h1>VSS Project-1</h1>
 </div>
  
 
