--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,6 @@
 <div class="main-container">
     <div><img src="../../../assets/apple.jpg"/></div>
-    <h1 class="demo" class="border border-primary position-static  p-3 " class="text-white p-2"
-        style="--bs-bg-opacity: .5;">
+    <h1 class="demo" class="p-3">
         VSS Project-1
     </h1>
     <ng-container *ngIf="profilecondition">
