--- a/src/app/core/footeer/footeer.component.scss
+++ b/src/app/core/footeer/footeer.component.scss
@@ -1,31 +1,45 @@
-.main-container {
-    margin: 0px;
-    clear: both;
-    display: flex;
-    justify-content: flex-start;
-    background-color: rgb(190, 201, 201);
-    padding: 20px 0px;
-.main-container{
-    background-color: rgb(194, 191, 20);
-    border-radius: 0px 25px 0px 25px;
-    height: auto;
-    position: relative;
-    margin: 0px;
-    .social{
-  position: absolute;
-  right:30px;
-  top: 10px;
-  margin-left: 25px;
+// .main-container {
+//     margin: 0px;
+//     clear: both;
+//     display: flex;
+//     justify-content: flex-start;
+//     background-color: rgb(190, 201, 201);
+//     padding: 20px 0px;
+// .main-container{
+//     background-color: rgb(194, 191, 20);
+//     border-radius: 0px 25px 0px 25px;
+//     height: auto;
+//     position: relative;
+//     margin: 0px;
+//     .social{
+//   position: absolute;
+//   right:30px;
+//   top: 10px;
+//   margin-left: 25px;
   
+//     }
+// }
+// h1{
+//     text-align: center;
+//     color: rgb(48, 40, 40);
+// }
+// .justy{
+//     display: flex;
+//     justify-content: space-between;
+//     margin: 0px 20px;
+// }
+// }
+.main-container{
+    background: palevioletred;
+    .social,h1{
+        display: flex;
+        justify-content: center;
     }
-}
-h1{
-    text-align: center;
-    color: rgb(48, 40, 40);
-}
-.justy{
-    display: flex;
-    justify-content: space-between;
-    margin: 0px 20px;
-}
+    .social{
+        padding: 10px 0;
+    }
+    h1{
+        color: azure;
+        font-weight: bold;
+    }
 }
