--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -1,17 +1,21 @@
 <div class="topRow">
-  <div>
+  <div *ngIf="searchBar">
     <mat-form-field appearance="standard" class=" mat-focused">
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+
     </mat-form-field>
+    <button mat-icon-button *ngIf="clearIcon">
+      <mat-icon color="primary" (click)="clearSearch(input)" class="clearIcon">clear</mat-icon>
+    </button>
   </div>
   <div>
     <button class="addInvoice" (click)="addNewInvo()">Add invoice</button>
   </div>
 </div>
 
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="datasource" matSort (matSortChange)="announceSortChange($event)">
+<div class="mat-elevation-z8 class">
+  <table mat-table [dataSource]="datasource" matSort>
 
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number" style="color:white">
@@ -46,7 +50,8 @@
         <!-- <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
           <mat-icon style="color:rgb(77, 137, 220)">menu</mat-icon>
         </button> -->
-        <button mat-icon-button color="primary" aria-label="Example icon button with a edit icon" (click)="editInvoice(element)">
+        <button mat-icon-button color="primary" aria-label="Example icon button with a edit icon"
+          (click)="editInvoice(element)">
           <mat-icon>edit</mat-icon>
         </button>
         <button mat-icon-button color="warn" aria-label="Example icon button with a delete icon"
@@ -60,19 +65,17 @@
     <tr mat-row *matRowDef="let row; columns:displayedColumns"></tr>
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      <td class="mat-cell" colspan="5">No data matching the filter "{{filterValue? filterValue:'No data found'}}"</td>
     </tr>
   </table>
-  <!-- <mat-paginator color="warn" [pageSizeOptions]="[8, 16, 24]" showFirstLastButtons>
-  </mat-paginator> -->
 </div>
-<mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5 bg-secondary text-white mt-3 mb-2"
-  [pageSize]="10"
-  [pageSizeOptions]="[5, 10, 25, 100]"
-  aria-label="Select page"
-  showFirstLastButtons>
-</mat-paginator>
 
+<div [style.visibility]="paginatorShow? 'hidden':'visible'">
+  <mat-paginator [length]="100"
+    class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5 bg-secondary text-white mt-3" [pageSize]="5"
+    [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page" showFirstLastButtons>
+  </mat-paginator>
+</div>
 <!-- spinner -->
 <mat-spinner strokeWidth="8" color="warn" diameter="100" *ngIf="spinner"></mat-spinner>
 <!-- add new invoice -->
@@ -81,13 +84,13 @@
     <div style="text-align: center;">
       <h3>{{title}}</h3>
     </div>
-    <div>
+    <!-- <div>
       <label for="">Id :</label>
       <input type="text" class="form-control"[(ngModel)]="newInvoice.id" style="margin-left: 35px;" >
-    </div>
+    </div> -->
     <div>
       <label for="">Name :</label>
-      <input type="text" class="form-control" [(ngModel)]="newInvoice.name" required  #name >
+      <input type="text" class="form-control" [(ngModel)]="newInvoice.name" required #name>
     </div>
     <div>
       <label for="">Email :</label>
@@ -98,23 +101,23 @@
       <input type="number" class="form-control" [(ngModel)]="newInvoice.phone" required minlength="10" #phone>
     </div>
     <div class="btns">
-      <button class="btn btn-primary" [disabled]="!(name.value && email.value && phone.value.length === 10)" (click)="addChanges()" >{{btnText}}</button>
+      <button class="btn btn-primary" [disabled]="!(name.value && email.value && phone.value.length === 10)"
+        (click)="addChanges()">{{btnText}}</button>
       <button class="btn btn-danger" (click)="cancel()">Cancel</button>
     </div>
   </div>
 </div>
 
-        <!-- delete model -->
-        <div class="dialogue" *ngIf="showDeleteform">
-            <div class="subDialogue">
-               <div>
-                   <h6>Are you sure to remove this item? </h6>
-                   <p>It will delete item permanently.</p>
-               </div>
-               <div class=" btns mt-5  ">
-                   <button class="btn btn-primary" (click)="conifirmDelete()">YES DELETE</button>
-                   <button class="btn btn-danger" (click)="cancelDelete()">CANCEL</button>
-               </div>
-            </div>
-        </div>
- 
+<!-- delete model -->
+<div class="dialogue" *ngIf="showDeleteform">
+  <div class="subDialogue">
+    <div>
+      <h6>Are you sure to remove this item? </h6>
+      <p>It will delete item permanently.</p>
+    </div>
+    <div class=" btns mt-5  ">
+      <button class="btn btn-primary" (click)="conifirmDelete()">YES </button>
+      <button class="btn btn-danger" (click)="cancelDelete()">NO</button>
+    </div>
+  </div>
+</div>
