--- a/src/app/invoices/invoices.component.scss
+++ b/src/app/invoices/invoices.component.scss
@@ -2,7 +2,9 @@
 //     background-color: rgb(225, 152, 152);
 
 // }
-
+// .class{
+//   margin:10px
+// }
 table {
   width: 100%;
   background-color: whitesmoke;
@@ -33,8 +35,10 @@ mat-form-field {
   font-size: 14px;
   width: 200px;
   margin:5px 0 0 5px;
-  //background-color:white;
-  //border:2px solid red;
+}
+.clearIcon{
+margin-left: -60px;
+ 
 }
 .addInvoice{
   color:white;
@@ -85,14 +89,14 @@ mat-spinner{
         background-color: white;
         padding:20px 30px 30px;
         border-radius: 5px;
-        height:350px;
+        height:310px;
         div{
           margin:15px
         }
         .btns{
           display: flex;
           justify-content: space-between;
-          margin-top:20px
+          margin-top:30px
         }
       }
 }
@@ -100,6 +104,7 @@ mat-spinner{
   display: flex;
   background-color:#ddd;
   color: black;
+  margin-bottom: 10px;
 }
 .mat-form-field-flex ng-tns-c76-5{
   color:black
