--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+// $ProductBoard-theme: mat-light-theme((
+//     color:(
+//         primary:$ProductBoard-theme,
+//         accent:$ProductBoard-theme,
+//         warn:$ProductBoard-theme,
+//     )
+// ))
