--- a/src/app/stocks/stocks/stocks.component.html
+++ b/src/app/stocks/stocks/stocks.component.html
@@ -1,7 +1,14 @@
 <div class="main-container p-3">
-    <mat-form-field color='block' class="mat-focused">
-        <input matInput placeholder="Filter" (keyup)="filter($event)" #input >
-    </mat-form-field>  
+    <div class="d-flex justify-content-between">
+        <div class="w-25">
+            <mat-form-field class="mat-focused w-100">
+                <input matInput placeholder="Filter" (keyup)="filter($event)" #input >
+            </mat-form-field>  
+        </div>
+        <div>
+            <button class="btn btn-primary"  (click)="addStocks()">addStockItem</button>
+        </div>
+    </div>
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
             <ng-container matColumnDef="id">
@@ -30,11 +37,11 @@
             </ng-container>
             <ng-container matColumnDef="actions">
                 <th class="actions" mat-header-cell *matHeaderCellDef style="color:white">Actions </th>
-                <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="primary" aria-label="Example icon button with a edit icon" >
+                <td mat-cell *matCellDef="let row">
+                    <button mat-icon-button color="primary" aria-label="Example icon button with a edit icon" (click)="editStock(row)">
                         <mat-icon>edit</mat-icon>
                     </button>
-                    <button mat-icon-button color="warn" aria-label="Example icon button with a delete icon">
+                    <button mat-icon-button color="warn" aria-label="Example icon button with a delete icon" (click)="delete(row.id)">
                         <mat-icon>delete</mat-icon>
                     </button>
                 </td>
@@ -49,9 +56,67 @@
        </table>
     </div>
     <div class="matPaginator">
-        <mat-paginator [length]="100" [hidden]="!dataSource.data.length || dataSource.data.length < 10 "  class="bg-secondary text-white mt-3" [pageSize]="10"
+        <mat-paginator [hidden]="dataSource.data.length < 5 "  class="bg-secondary text-white mt-3" [pageSize]="5"
             [pageSizeOptions]="[3, 5, 7, 10]" aria-label="Select page" showFirstLastButtons>
         </mat-paginator>
     </div>
 </div>
- 
+<div class="dilogueBox" *ngIf="dilogueBox">
+    <div class="addForm">
+          <div class="text-center">
+              <h2>{{addStockText}}</h2>
+          </div>
+          <form [formGroup]="stocksForm">
+            <div>
+                <mat-form-field  class="mat-focused  itemId" aria-readonly="true">
+                    <input matInput placeholder="Item Id" formControlName="id" [readonly]="!editable"  >
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field  class="mat-focused">
+                    <input matInput placeholder="Item Name" formControlName="itemName">
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field  class="mat-focused" >
+                    <input matInput placeholder="Discription" formControlName="discription">
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field  class="mat-focused">
+                    <input matInput placeholder="Batch Name" formControlName="batchName">
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field  class="mat-focused">
+                <input matInput placeholder="Company Name" formControlName="companyName">
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field  class="mat-focused">
+                <input matInput placeholder="Quanity"  formControlName="quanity" >
+                </mat-form-field> 
+            </div>
+            <div class="d-flex justify-content-between"> 
+                <div>
+                    <button (click)="addStockItem()" [disabled]="stocksForm.invalid" class="btn btn-success">addStock</button>
+                </div>
+                <div>
+                    <button (click)="cencel()" class="btn btn-danger">Cencel</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<div class="dilogueBox" *ngIf="showDeleteform">
+    <div class="addForm">
+       <div>
+           <h5>Are you sure to remove this item? </h5>
+           <p>It will delete item permanently.</p>
+       </div>
+       <div class="d-flex justify-content-between">
+           <button class="btn btn-primary" (click)="conifirmDelete()">YES DELETE</button>
+           <button class="btn btn-danger" (click)="cencel()">CANCEL</button>
+       </div>
+    </div>
+</div>
