--- a/src/app/stocks/stocks/stocks.component.scss
+++ b/src/app/stocks/stocks/stocks.component.scss
@@ -27,8 +27,38 @@ th{
 }
 .mat-form-field {
     font-size: 14px;
-    width: 100%;
+    width:100%;
   }      
 [hidden] {
     display: none !important;
+}
+.itemId{
+    &:hover{
+        cursor:not-allowed;
+    }
+   input{
+    &:hover{
+        cursor:not-allowed;
+   } 
+ } 
+}
+.dilogueBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:100%;
+    width:100%;
+    position:fixed;
+    top:0;
+    left:0;
+    background:rgba(0,0,0,0.5);
+    z-index: 100;
+    .addForm{
+        background-color: white;
+        padding:20px 30px 30px;
+        border-radius: 5px;
+        height:max-content;
+        width:400px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    } 
 }
