--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,3 +3,10 @@ img{
     width: 100%;
   }
 
+  // #carouselExampleInterval{
+  //   position: relative;
+  //   button{
+  //     position: relative;
+  //     top:200px;
+  //   }
+  // }
