--- a/src/app/core/footeer/footeer.component.scss
+++ b/src/app/core/footeer/footeer.component.scss
@@ -1,5 +1,6 @@
 .main-container{
     background: palevioletred;
+    clear: both;
     .social,h2{
         display: flex;
         justify-content: center;
