--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,8 +1,6 @@
 <div class="main-container">
     <div><img src="../../../assets/apple.jpg"/></div>
-    <h1 class="demo" class="p-3">
-        VSS Project-1
-    </h1>
+    <h1 class="demo">VSS Project-1</h1>
     <ng-container *ngIf="profilecondition">
           <div class="dropdown rounded-circle dropdownmenu bg-white">
             <button class="btn btn-white dropdown-toggle" [matMenuTriggerFor]="menu" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -16,5 +14,4 @@
               <button mat-menu-item class=" text-dark" (click)="LogOut()">Logout</button>
           </mat-menu>
     </ng-container>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </div>
