--- a/src/app/stocks/stocks/stocks.component.html
+++ b/src/app/stocks/stocks/stocks.component.html
@@ -1,8 +1,8 @@
 <div class="main-container p-3">
     <div class="d-flex justify-content-between">
         <div class="w-25">
-            <mat-form-field class="mat-focused w-100">
-                <input matInput placeholder="Filter" (keyup)="filter($event)" #input >
+            <mat-form-field class="mat-focused w-100" *ngIf="dataSource.data.length!==0">
+                <input matInput placeholder="Filter" (keyup)="filter($event)">
             </mat-form-field>  
         </div>
         <div>
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
+        <table mat-table [dataSource]="dataSource" matSort *ngIf="dataSource.data.length!==0">
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Item ID </th>
                 <td mat-cell *matCellDef="let row"> {{row.id}} </td>
@@ -50,7 +50,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             <tr *matNoDataRow>
                 <td style="text-align: center;" [attr.colspan]="displayedColumns.length">
-                    No Records Found! <span style="font-weight: bold;">{{input.value}}</span>
+                    No Records Found! <span style="font-weight: bold;">{{eventValue}}</span>
                 </td>
             </tr>
        </table>
