--- a/src/app/stocks/stocks/stocks.component.html
+++ b/src/app/stocks/stocks/stocks.component.html
@@ -9,8 +9,8 @@
             <button class="btn btn-primary"  (click)="addStocks()">addStockItem</button>
         </div>
     </div>
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort *ngIf="dataSource.data.length!==0">
+    <div class="mat-elevation-z8" *ngIf="dataSource.data.length!==0">
+        <table mat-table [dataSource]="dataSource" matSort>
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Item ID </th>
                 <td mat-cell *matCellDef="let row"> {{row.id}} </td>
@@ -94,7 +94,7 @@
             </div>
             <div>
                 <mat-form-field  class="mat-focused">
-                <input matInput placeholder="Quanity"  formControlName="quanity" >
+                <input matInput placeholder="Quanity" type="number" appDigits formControlName="quanity" >
                 </mat-form-field> 
             </div>
             <div class="d-flex justify-content-between"> 
