--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="routers mt-1">
                         <a [routerLink]="['/registration']">Register</a>
-                        <a [routerLink]="['/forgetpasswordemailLink']">Forgot Password</a>
+                        <a [routerLink]="['/forgetpassword']">Forgot Password</a>
                     </div>
                     <div class="border mt-2"></div>
                     <div class="login-bottom mt-2">
