--- a/src/app/stocks/stocks/stocks.component.html
+++ b/src/app/stocks/stocks/stocks.component.html
@@ -1,9 +1,10 @@
 <div class="main-container p-3">
     <div class="d-flex justify-content-between">
-        <div class="w-25">
+        <div class="w-25 position-relative">
             <mat-form-field class="mat-focused w-100" *ngIf="dataSource.data.length!==0">
-                <input matInput placeholder="Filter" (keyup)="filter($event)">
-            </mat-form-field>  
+                <input matInput placeholder="Filter"  [(ngModel)]="eventValue" (keyup)="filter($event)">
+            </mat-form-field> 
+            <mat-icon *ngIf="clearIcon" class="position-absolute" (click)="clear()">clear</mat-icon> 
         </div>
         <div>
             <button class="btn btn-primary"  (click)="addStocks()">addStockItem</button>
@@ -16,23 +17,23 @@
                 <td mat-cell *matCellDef="let row"> {{row.id}} </td>
             </ng-container>
             <ng-container matColumnDef="itemName">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> itemName </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name </th>
                 <td mat-cell *matCellDef="let row"> {{row.itemName}}</td>
             </ng-container>
             <ng-container matColumnDef="discription">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> discription </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Discription </th>
                 <td mat-cell *matCellDef="let row"> {{row.discription}} </td>
             </ng-container>
             <ng-container matColumnDef="batchName">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> batchName </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Batch Name </th>
                 <td mat-cell *matCellDef="let row"> {{row.batchName}} </td>
             </ng-container>
             <ng-container matColumnDef="companyName">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> companyName </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Company Name </th>
                 <td mat-cell *matCellDef="let row"> {{row.companyName}} </td>
             </ng-container>
             <ng-container matColumnDef="quanity">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> quanity </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Quanity </th>
                 <td mat-cell *matCellDef="let row"> {{row.quanity}} </td>
             </ng-container>
             <ng-container matColumnDef="actions">
