--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -67,16 +67,21 @@
 
 
 .ddd{
-  background-image: linear-gradient(to top right, blue, green);
-  height:100vh;
-  margin: 0px;
-  padding:0px 250px;
+  //background-image: linear-gradient(to top right, blue, green);
+  background: url('../../../assets/dow.jpg') center no-repeat;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background-size: cover;
+  position: relative;  
+
+   padding:0px 250px;
 }
 .main-container {
-    border: 2px solid black;
+    //border: 2px solid black;
     border-radius: 10px;
     background: #fff;
-    margin-top: 40px;
+    margin-top: 25px;
     form{
         padding: 40px;
     }
