--- a/src/app/components/forget-password/forget-password.component.scss
+++ b/src/app/components/forget-password/forget-password.component.scss
@@ -1,5 +1,5 @@
  .p1{
-    background: url(../../../assets/download.jfif) center no-repeat;
+    background: url(../../../assets/pic1.jpg) center no-repeat;
     width: 100%;
     height: 100vh;
     margin: 0;
