--- a/src/app/components/payments/payments.component.html
+++ b/src/app/components/payments/payments.component.html
@@ -1,1 +1,21 @@
-<p>payments works!</p>
+<div class="main-container">
+    <div class="sub-container">
+        <div class="row">
+            <div class="col-6 bg-primary">
+               <h1>Payments</h1>
+            </div>
+            <div class="col-6 bg-white">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <p>Date:15/1/2023</p> 
+                        <p>Time:10:10:25</p>
+                    </div>
+                    <div>
+                        <p>Customer Name:Nagaraju</p> 
+                        <p>Total Due Amount:10,000</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
